fix overlapping pronoun box on staff with short statements

--- a/themes/gfsc/assets/sass/components/_member.sass
+++ b/themes/gfsc/assets/sass/components/_member.sass
@@ -125,6 +125,7 @@
     +for-tablet-portrait-up
       align-self: baseline
       padding-top: 2rem
+      margin-bottom: 2rem
     +for-tablet-landscape-up
       width: fit-content
       margin-left: auto
